switch from slds-grid to lightning-layout

--- a/src/lwc/gauExpenditureRow/gauExpenditureRow.css
+++ b/src/lwc/gauExpenditureRow/gauExpenditureRow.css
@@ -1,11 +1,5 @@
-.custom-button-style {
-  padding-top: 1.15rem;
-}
-
-.custom-lookup-style {
-  padding-left: 1.25rem;
-}
-
 .custom-percent-style {
-  padding-top: 1.5rem;
+  padding-top: 1rem;
+  padding-left: .25rem;
+
 }
