--- a/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.css
+++ b/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.css
@@ -1,8 +1,22 @@
 .custom-percent-style {
-  padding-top: .25rem;
-  padding-left: .25rem;
+  padding-top: 0.25rem;
+  padding-left: 0.25rem;
 }
 
-.slds-form-element__label{
+.slds-form-element__label {
   display: none;
+}
+
+.THIS input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+.THIS input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
 }
